# extender

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml  security.yml
crates/extender-api/: Cargo.toml
crates/extender-api/src/: jsonrpc.rs  lib.rs  types.rs
crates/extender-cli/: Cargo.toml
crates/extender-cli/src/: main.rs  output.rs
crates/extender-cli/src/commands/: attach.rs  daemon.rs  list.rs  status.rs
crates/extender-client/: Cargo.toml
crates/extender-client/src/: engine.rs  lib.rs  remote.rs  types.rs
crates/extender-daemon/: Cargo.toml
crates/extender-daemon/src/: api_server.rs  config.rs  lib.rs  privileges.rs  signals.rs
crates/extender-protocol/: Cargo.toml
crates/extender-protocol/src/: codec.rs  discovery.rs  error.rs  urb.rs
crates/extender-protocol/tests/: proptest_roundtrip.rs
crates/extender-server/: Cargo.toml
crates/extender-server/src/: connection.rs  device.rs  engine.rs  error.rs  export.rs  handle.rs  lib.rs
crates/extender-server/tests/: integration.rs
docs/: usbip-implementations-landscape.md  usbip-protocol-spec.md
extender/: Cargo.toml
extender-macos/: README.md  project.yml
extender-macos/Extender.xcodeproj/: project.pbxproj
extender-macos/Extender.xcodeproj/xcuserdata/cali.xcuserdatad/xcschemes/: xcschememanagement.plist
extender-macos/ExtenderApp/: Package.swift
extender-macos/ExtenderApp/Entitlements/: ExtenderApp.entitlements
extender-macos/ExtenderApp/Sources/ExtenderApp/: ExtenderApp.swift  MenuBarView.swift
extender-macos/ExtenderApp/Sources/ExtenderBridge/: DaemonManager.swift  JSONRPCClient.swift
extender-macos/ExtenderDriver/: ExtenderDriver.entitlements  ExtenderStorageUserClient.cpp  ExtenderStorageUserClient.iig  ExtenderVirtualStorageDriver.cpp  ExtenderVirtualStorageDriver.h  ExtenderVirtualStorageDriver.iig  Info.plist  README.md
extender-windows/ExtenderTray/: App.xaml  App.xaml.cs  DaemonClient.cs  ExtenderTray.csproj
extender/crates/extender-api/src/: lib.rs  methods.rs
extender/crates/extender-cli/: Cargo.toml
extender/crates/extender-cli/src/: client.rs  main.rs  output.rs
extender/crates/extender-cli/src/commands/: attach.rs  bind.rs  daemon.rs  discover.rs  list.rs  mod.rs  tls_gen.rs
extender/crates/extender-client/: Cargo.toml
extender/crates/extender-client/src/: audio.rs  discover.rs  engine.rs  error.rs  hid.rs  lib.rs  mass_storage.rs  network.rs  reconnect.rs  remote.rs  serial.rs  tls.rs  vhci.rs  vhci_windows.rs
extender/crates/extender-daemon/: Cargo.toml
extender/crates/extender-daemon/src/: api_server.rs  config.rs  device_acl.rs  lib.rs  mdns.rs
extender/crates/extender-protocol/src/: codec.rs  codes.rs  device.rs  discovery.rs  error.rs  lib.rs  urb.rs  wire.rs
extender/crates/extender-protocol/tests/: proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
extender/crates/extender-server/: Cargo.toml
extender/crates/extender-server/src/: connection.rs  engine.rs  error.rs  export.rs  lib.rs  session.rs  tls.rs  transfer.rs
extender/crates/extender-server/tests/: tls_integration.rs
extender/packaging/: install.sh
extender/packaging/homebrew/: extender.rb
extender/packaging/launchd/: com.extender.daemon.plist
extender/packaging/systemd/: extender.service
