[workspace]
resolver = "2"
members = [
    "crates/extender-protocol",
    "crates/extender-api",
    "crates/extender-server",
    "crates/extender-client",
    "crates/extender-daemon",
    "crates/extender-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Cali"]

[workspace.dependencies]
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
