[workspace]
resolver = "2"
members = [
    "crates/extender-protocol",
    "crates/extender-api",
    "crates/extender-server",
    "crates/extender-client",
    "crates/extender-daemon",
    "crates/extender-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Cali"]

[workspace.dependencies]
bytes = "1"
rusb = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["user", "signal", "fs", "hostname"] }
dirs = "6"
tokio-util = "0.7"
proptest = "1"
clap = { version = "4", features = ["derive"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
mdns-sd = "0.11"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security"] }
