[package]
name = "extender-api"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Shared API types for Extender JSON-RPC interface"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
