[package]
name = "extender-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Extender command-line interface"

[[bin]]
name = "extender"
path = "src/main.rs"

[dependencies]
extender-api = { path = "../extender-api" }
extender-daemon = { path = "../extender-daemon" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
