[package]
name = "extender-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Extender command-line interface"

[[bin]]
name = "extender"
path = "src/main.rs"

[dependencies]
extender-api = { path = "../extender-api" }
extender-client = { path = "../extender-client" }
extender-daemon = { path = "../extender-daemon" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
rcgen = { workspace = true }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
