[package]
name = "extender-client"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "USB/IP client logic"

[dependencies]
extender-protocol = { path = "../extender-protocol" }
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
