[package]
name = "extender-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Extender daemon process"

[dependencies]
extender-protocol = { path = "../extender-protocol" }
extender-api = { path = "../extender-api" }
extender-server = { path = "../extender-server" }
extender-client = { path = "../extender-client" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
dirs = { workspace = true }
mdns-sd = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
